--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.8.2",
-    "@types/react-redux": "^7.1.34",
+    "@monaco-editor/react": "^4.6.0",
+    "@xyflow/react": "^12.3.4",
+    "immer": "^10.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
