--- a/package.json
+++ b/package.json
@@ -12,8 +12,26 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@tiptap/core": "^2.23.0",
+    "@tiptap/extension-code-block-lowlight": "^2.23.0",
+    "@tiptap/extension-image": "^2.23.0",
+    "@tiptap/extension-link": "^2.23.0",
+    "@tiptap/extension-mention": "^2.23.0",
+    "@tiptap/extension-placeholder": "^2.23.0",
+    "@tiptap/extension-table": "^2.23.0",
+    "@tiptap/extension-table-cell": "^2.23.0",
+    "@tiptap/extension-table-header": "^2.23.0",
+    "@tiptap/extension-table-row": "^2.23.0",
+    "@tiptap/extension-task-item": "^2.23.0",
+    "@tiptap/extension-task-list": "^2.23.0",
+    "@tiptap/extension-typography": "^2.23.0",
+    "@tiptap/pm": "^2.23.0",
+    "@tiptap/react": "^2.23.0",
+    "@tiptap/starter-kit": "^2.23.0",
+    "@types/hast": "^3.0.4",
     "@xyflow/react": "^12.3.4",
     "immer": "^10.1.1",
+    "lowlight": "^3.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
