--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@xyflow/react": "^12.3.4",
     "immer": "^10.1.1",
     "lowlight": "^3.3.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
