--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tiptap/starter-kit": "^2.23.0",
     "@types/hast": "^3.0.4",
     "@xyflow/react": "^12.3.4",
+    "date-fns": "^4.1.0",
     "immer": "^10.1.1",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.525.0",
