refactor(core): 重构节点组件和导入导出功能
将节点组件和导入导出功能迁移到核心包中，优化代码结构
移除冗余的组件文件，简化项目依赖
添加连接点可连接性配置，增强节点交互功能
改进存储服务的错误处理和日志记录
统一导入导出工具的实现，解决节点ID冲突问题

--- a/flow-flat-app/package.json
+++ b/flow-flat-app/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@flow-flat/core": "link:../package",
     "@monaco-editor/react": "^4.6.0",
     "@tiptap/core": "^2.23.0",
     "@tiptap/extension-code-block-lowlight": "^2.23.0",
