fix(vercel): 更新路由重写规则以匹配子路径
refactor(deps): 添加本地核心模块依赖并更新锁文件

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "source": "/flow-flat-app/(.*)",
+      "destination": "/flow-flat-app/index.html"
     }
   ]
 }
