--- a/flow-flat-app/package.json
+++ b/flow-flat-app/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@flow-flat/core": "link:../package",
+    "custom-react-flow-node": "link:../package-custom-react-flow-node",
     "@monaco-editor/react": "^4.6.0",
     "@tiptap/core": "^2.23.0",
     "@tiptap/extension-code-block-lowlight": "^2.23.0",
