--- a/flow-flat-app/package.json
+++ b/flow-flat-app/package.json
@@ -11,8 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@flow-flat/core": "link:../package",
-    "custom-react-flow-node": "link:../package-custom-react-flow-node",
+    "custom-react-flow-node": "^1.0.0",
     "@monaco-editor/react": "^4.6.0",
     "@tiptap/core": "^2.23.0",
     "@tiptap/extension-code-block-lowlight": "^2.23.0",
