--- a/package-custom-react-flow-node/package.json
+++ b/package-custom-react-flow-node/package.json
@@ -2,16 +2,15 @@
   "name": "custom-react-flow-node",
   "version": "1.0.0",
   "description": "A customizable React Flow node component library",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
-  "type": "module",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
+    "build": "rollup -c",
+    "dev": "rollup -c --watch",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
@@ -21,12 +20,12 @@
     "component",
     "typescript"
   ],
-  "author": "Your Name",
+  "author": "jackson",
   "license": "MIT",
   "peerDependencies": {
+    "@xyflow/react": ">=12.0.0",
     "react": ">=16.8.0",
-    "react-dom": ">=16.8.0",
-    "@xyflow/react": ">=12.0.0"
+    "react-dom": ">=16.8.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.0",
@@ -37,6 +36,7 @@
     "rollup": "^4.0.0",
     "rollup-plugin-dts": "^6.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "tslib": "^2.8.1",
     "typescript": "^5.0.0"
   }
 }
